--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" type="image/icon" href="http://localhost:5000/api/v1/mainAssets/favicon.ico" />
+  <link rel="icon" type="image/icon" href="https://chatterbox-87ip.onrender.com/api/v1/mainAssets/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ChatterBox - chat  with  loved ones</title>
 </head>
